# hour-of-happiness-cpp-client

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
